# payments-notifications

./: .drone.yml  Cargo.toml  Dockerfile  README.md
config/: development.toml  k8s.toml
config/keys/: payments.dev.pfx
docker/: Dockerfile.local  docker-compose.yml
k8s/: 00-cm-pay-gw.yml  00-cm-pay-notifications.yml  00-job-createdb.yml  20-svc-pay-gw.yml  30-deploy-pay-gw.yml  30-deploy-pay-notifications.yml
src/: config.rs  lib.rs  main.rs  prelude.rs  schema.rs  utils.rs
src/api/: error.rs  mod.rs  utils.rs
src/api/controllers/: mod.rs
src/client/: mod.rs
src/client/callback/: mod.rs
src/client/email/: mod.rs  requests.rs
src/client/http_client/: error.rs  mod.rs
src/client/ios/: mod.rs
src/models/: account_address.rs  account_id.rs  amount.rs  callback.rs  currency.rs  emails.rs  mod.rs  push_notifications.rs  transaction.rs
src/rabbit/: r2d2.rs  transactions.rs  transactions_consumer.rs  transactions_publisher.rs
src/services/: error.rs  mod.rs  rabbit.rs
